--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-fixed-header": "^3.2.15",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
