--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "vue": "^2.6.11",
     "vue-fixed-header": "^3.2.15",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vuejs-twitter-feed": "^1.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
